<resources>
    <string name="app_name">Getting There</string>
    <string name="start_button_nav">Go Somewhere</string>
    <string name="start_button_maps">See the Maps</string>
    <string name="start_button_help">Get Help</string>
    <string name="start_text_title">Getting There</string>
    <string name="start_skyline_desc">NYC skyline for background</string>
    <string name="help_button_back">Go Back</string>
    <string name="station_name">Station Name</string>
    <string name="ocr_text_output">OCR Text Output</string>
    <string name="take_photo_button">Take Photo</string>
    <string name="accept_output_button">Accept Output</string>
    <string name="reject_output_button">Reject Output</string>
    <string name="go_back_button">Go Back</string>

    <string name="text_entry_title">Verify Location: Text Entry</string>
    <string name="text_entry_instructions">Enter text from a sign near you to check
        whether you are in the right part of the station. Try to avoid mistakes when typing, and
        spell everything exactly as it is written on the sign!</string>
    <string name="example_title">If You See:</string>
    <string name="example_followup">Then Type In:</string>
    <string name="sign_text">Prospect Av Station\nBay Ridge\nR</string>
    <string name="clear_text">Clear Text</string>
    <string name="check_text">Check Text</string>

    <string name="google_app_id">responsive-hall-130823</string>
    <string name="google_maps_key" templateMergeStrategy="preserve"></string>
    <string name="action_settings">Settings</string>
    <string name="source">Where are you coming from?</string>
    <string name="destination">End</string>
    <string name="directions">GET THERE!</string>

    <string name="get_directions_instructions">Choose your starting point and end destination by
    clicking the buttons below and entering an address into each prompt. Once the route has been found,
    click GET THERE to be on the way to your destination.</string>
    <string name="maps_explanation">Maps are clickable! When viewing a map from the Maps menu or
        during navigation, the small orange icons are buttons representing signs. Click one to see
        that sign\'s text.</string>
    <string name="nav_instructions">Enter a Start and End location in the Maps Menu. After you click
    "GET THERE", look through the navigation steps. If you need help you can click a step to check a station
    map, verify with text entry, or verify by taking a photo of a sign.</string>
</resources>
