<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TakePhotoForOCR">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:id="@+id/ocrResultImageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ocr_text_output"
        android:id="@+id/ocrResultTextView"
        android:layout_above="@+id/takePhotoButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="0dp"
        android:autoText="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/take_photo_button"
        android:id="@+id/takePhotoButton"
        android:layout_above="@+id/acceptButton"
        android:layout_centerHorizontal="true"
        android:textSize="28sp"
        android:onClick="launchCamera" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/accept_output_button"
        android:id="@+id/acceptButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="" />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/go_back_button"
        android:id="@+id/backToNavButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
